@@ -1,255 +1,175 @@
-I want to compare the (embedded execution + embedded storage) results vs the (remote execution + remote storage) results,
-
-So I run
-```
-nohup java -Xms9G -Xmx9G -XX:ReservedCodeCacheSize=256m \
-     -XX:MetaspaceSize=256m -XX:MaxMetaspaceSize=512m \
-     -XX:MaxDirectMemorySize=1G -XX:+PrintGCDetails \
-     -XX:+PrintGCDateStamps  -Xloggc:gc.log \
-     -XX:+UseConcMarkSweepGC -XX:NewRatio=2 \
-     -XX:+CMSScavengeBeforeRemark -XX:+ParallelRefProcEnabled \
-     -XX:+HeapDumpOnOutOfMemoryError \
-     -XX:+UseCMSInitiatingOccupancyOnly  -XX:CMSInitiatingOccupancyFraction=70 \
-     -Dexec.csv.enabled=true -Dexec.csv.stateChanges.enabled=true \
-     -jar ./build/libs/FullNode.jar -c ./main_net_config_embedded.conf >> start.log 2>&1 &
-```
-
-and
-```
-nohup java -Xms9G -Xmx9G -XX:ReservedCodeCacheSize=256m \
-     -XX:MetaspaceSize=256m -XX:MaxMetaspaceSize=512m \
-     -XX:MaxDirectMemorySize=1G -XX:+PrintGCDetails \
-     -XX:+PrintGCDateStamps  -Xloggc:gc.log \
-     -XX:+UseConcMarkSweepGC -XX:NewRatio=2 \
-     -XX:+CMSScavengeBeforeRemark -XX:+ParallelRefProcEnabled \
-     -XX:+HeapDumpOnOutOfMemoryError \
-     -XX:+UseCMSInitiatingOccupancyOnly  -XX:CMSInitiatingOccupancyFraction=70 \
-     -Dexec.csv.enabled=true -Dexec.csv.stateChanges.enabled=true \
-     -jar ./build/libs/FullNode.jar -c ./main_net_config_remote.conf \
-     --execution-spi-enabled --execution-mode "REMOTE" >> start.log 2>&1 &
-```
-
-respectively.
+think harder:
 
 
-The result csv are
-+ output-directory/execution-csv/20250829-134317-a5713e7a-embedded-embedded.csv
-+ output-directory/execution-csv/20250830-074028-d1b5315f-remote-remote.csv
-respectively.
+
+I am comparing and debugging the (embedded execution + embedded storage) results vs the (remote execution + remote storage) results,
+accoridng to planning.md and the "Current Task: TRON‑Accurate Fee Handling (Remote Execution)" section in CLAUDE.md .
 
 
-Then I run the compare tool:
-```
-python3 scripts/execution_csv_compare.py \
- --left output-directory/execution-csv/20250829-134317-a5713e7a-embedded-embedded.csv \
- --right output-directory/execution-csv/20250830-074028-d1b5315f-remote-remote.csv \
- --output reports/
-```
-
-The output is:
-```
-Starting execution CSV comparison...
-Left file:  output-directory/execution-csv/20250829-134317-a5713e7a-embedded-embedded.csv
-Right file: output-directory/execution-csv/20250830-074028-d1b5315f-remote-remote.csv
-Output dir: reports/
-Comparing fields: is_success, result_code, energy_used, return_data_hex, runtime_error, state_digest_sha256, state_change_count
-Loading output-directory/execution-csv/20250829-134317-a5713e7a-embedded-embedded.csv...
-Loaded 2116 rows from output-directory/execution-csv/20250829-134317-a5713e7a-embedded-embedded.csv
-Loading output-directory/execution-csv/20250830-074028-d1b5315f-remote-remote.csv...
-Loaded 888 rows from output-directory/execution-csv/20250830-074028-d1b5315f-remote-remote.csv
-Performing join and comparison...
-
-Reports generated in reports//
-- Summary: comparison_summary.txt
-- Mismatches: mismatches.csv
-- JSON data: comparison_results.json
-
-Comparison complete!
-Matched transactions: 888
-Mismatched transactions: 2116
-Left-only transactions: 1228
-Right-only transactions: 0
-is_success: 99.3% accuracy (6/888 mismatches)
-result_code: 99.3% accuracy (6/888 mismatches)
-energy_used: 0.7% accuracy (882/888 mismatches)
-return_data_hex: 100.0% accuracy (0/888 mismatches)
-runtime_error: 99.3% accuracy (6/888 mismatches)
-state_digest_sha256: 0.0% accuracy (888/888 mismatches)
-state_change_count: 0.0% accuracy (888/888 mismatches)
-Comparison completed successfully!
-```
-
-And I found the `state_change_count` in `20250829-134317-a5713e7a-embedded-embedded.csv` and `20250830-074028-d1b5315f-remote-remote.csv` are different.
-I think it's due to coinbase/fee sink-ish account change in evm, which should not appear on TRON.
-
-basically
-
-Fee Semantics: EVM vs TRON
-
-- EVM gas model:
-    - Base fee: burned (EIP‑1559); pre‑1559 all gas went to miner.
-    - Priority fee (“tip”): credited to the miner’s coinbase address in the same transaction state
-transition.
-    - Simple ETH transfer typically uses 21000 gas; coinbase gets the tip; this shows up as an account
-delta to the miner.
-- TRON resource model:
-    - Resources: bandwidth (for non‑VM tx) and energy (only for VM tx).
-    - Non‑VM (e.g., TransferContract): flat network fee plus optional “account creation” fee.
-    - Fee destination:
-    - Burn: if `supportBlackHoleOptimization` is enabled, the fee is burned — no account receives funds;
-total supply decreases (no state change to a fee account).
-    - Blackhole account: otherwise, fee is transferred to a designated “blackhole” account (an actual
-account in state).
-- Witness rewards: paid at block finalization in Manager#payReward (block/fee pool accounting), not
-per transaction to a coinbase address. There is no EVM‑style miner tip credited in the same tx state
-transitions.
-
-What “TRON‑Accurate Fee Handling” Means
-
-- Non‑VM transactions:
-    - Do not credit any “coinbase/miner” account as part of the tx state changes.
-    - Apply only:
-    - Sender balance decrease by `amount + fee`.
-    - Recipient balance increase by `amount`.
-    - Fee handling:
-      - If burning: no extra account delta (supply reduction handled by dynamic properties, not as an
-account transfer).
-      - If blackhole path: credit the blackhole account by `fee`.
-- Energy used should be 0 (not 21000), because the EVM is not involved.
-- VM transactions:
-    - Charge energy according to TRON’s rules (caller vs origin share via consumeUserResourcePercent,
-staking/freeze mechanics).
-    - Still no per‑tx miner/coinbase credit. Fee burn or fee pool accounting follows TRON proposals and is
-not an EVM miner payout.
-
-Why the Remote Backend Should Not Emit Coinbase
-
-- The Java actuator path (embedded) never credits a coinbase/miner address during a tx. It either burns or
-credits blackhole (per config).
-- The “extra” account change you saw in remote CSV is a carryover from Ethereum semantics. It should be
-removed for TRON parity.
-- If burning is enabled, the correct behavior is to emit no third account change at all.
+but is the phase 3 implementation (commit d70c6696e60333549f803e0a27ce11ecdc2f07af) really correct? or is there any other reason?
 
 
-Now, no need to code, think hard and  give me a plan on:
+why I ask is because:
 
-Modify Rust backend to emit TRON‑accurate fee handling for non‑VM (burn vs. blackhole credit), so it doesn’t report the extra “coinbase” change when it shouldn’t exist on TRON.
+
+the embbed result is output-directory/execution-csv/20250830-121317-cfc1a8c1-embedded-embedded.csv,
+
+phase 1 and phase 2 remote result is output-directory/execution-csv/20250901-063135-9f694cc7-remote-remote.csv
+
+but phase 3 remote result (output-directory/execution-csv/20250901-064114-89131436-remote-remote.csv) get stuck at some tx at block_num 2040
+
+
+for more info:
++ phase 2 java-side logs is: java-2.log
++ phase 2 rust-side logs is: rust-2.log
++ phase 3 java-side logs is: java-3.log
++ phase 3 rust-side logs is: rust-3.log
 
 
 ---
 
 
-Goal
 
-- Remove Ethereum-style coinbase credit from remote execution results and emit TRON-accurate fee effects
-for non-VM txs (burn vs. blackhole), so state_change_count and state digest match embedded.
+Here’s what I found by correlating the CSVs, your phase 2/3 logs, and the Phase 3 diff.
 
-Behavioral Invariants
+What happened
 
-- No per-tx miner/coinbase credit on TRON (VM and non-VM).
-- Non-VM (e.g., TransferContract): energy_used = 0; only sender/recipient deltas; fee is burn (no state
-delta) or blackhole credit (1 extra delta).
-- VM txs: charge/report energy used; no miner/coinbase credit; any fee burn/blackhole accounting should
-not appear as EVM state changes.
+- Stoppage point: The Phase 3 CSV stops in block 2040 after tx index 3. Highest recorded entries are block
+2040, tx_index 0–3, then no 4th row.
+- Rust errors: In rust-3.log there are hard failures before that window: “Non-VM transaction execution
+failed: Insufficient balance: need 125000, have 0” (06:42:33). That’s consistent with enforcing a TRX fee
+for a non-VM tx where the sender had 0 TRX but still had free bandwidth on TRON.
+- Phase 2 vs 3 contrast: Phase 2 had no such “Insufficient balance” errors, and the CSV progressed (1284
+rows). Phase 3 stopped early (241 rows).
 
-Phase 1 – Parity Fix (no proto change)
+Why this happens (Phase 3 deviation)
 
-- Suppress EVM coinbase payout:
-    - service: set gas_price = 0 in convert_protobuf_transaction to prevent REVM from moving funds to
-coinbase. File: rust-backend/crates/core/src/service.rs.
-    - evm env: ensure block.basefee = 0 (if available) and keep enable_london_fork true or set basefee
-explicitly to zero. File: crates/execution/src/tron_evm.rs.
-- Remove Ethereum-specific gas checks:
-    - Drop the tx.gas_limit < 21000 rejection. Only enforce tx.gas_limit <= context.block_gas_limit. File:
-crates/execution/src/tron_evm.rs.
-- Stabilize state change ordering for digest parity:
-    - Before returning, sort state_changes deterministically:
-    - AccountChange: by `address` ascending.
-    - StorageChange: by `(address, key)` ascending.
-- File: crates/execution/src/tron_evm.rs (post extract_state_changes_from_db).
-- Heuristic non-VM energy fix (optional stopgap):
-    - If data.is_empty() and to has no code (query via storage adapter), set energy_used = 0. Do not add
-any fee deltas. Files: crates/core/src/service.rs (after result), or in tron_evm.rs post-process result.
+- Always-charging non‑VM fees: In rust-backend/crates/core/src/service.rs, the new non‑VM path computes
+fee_amount = bandwidth_used * context.bandwidth_price (default 1000) when non_vm_blackhole_credit_flat is
+None, and then requires sender balance >= (value + fee), or it returns Err("Insufficient balance").
+- Missing TRON free bandwidth semantics: TRON first consumes free bandwidth/staked resources for non‑VM
+transactions. Only when free bandwidth is insufficient does it burn TRX. The Phase 3 code ignores this and
+charges TRX unconditionally, causing legitimate non‑VM transfers to fail with “Insufficient balance”.
+- Wrong nonce semantics for non‑VM: The Phase 3 non‑VM path increments the sender “nonce” (Ethereum
+concept). TRON non‑VM transfers do not increment an EVM nonce. This can create parity mismatches even when
+it doesn’t halt.
+- Incomplete contract-type handling: Java sends only a TxKind (NON_VM/VM). For TransferAssetContract
+(TRC‑10), the current path treats it like a TRX transfer (uses value field to move TRX), which is
+incorrect. Even if the stuck case here is a TransferContract, this is another correctness hole.
+- Context defaults are risky: Fallbacks like block_number = 0 and block_timestamp = now can skew
+resource/fee logic if a null block context ever leaks through (less likely here, but should be fixed for
+determinism).
 
-Result: No coinbase state deltas; non-VM txs report energy 0; state_change_count should match embedded;
-digest accuracy improves.
+Concrete evidence
 
-Phase 2 – TRON Fee Policy (configurable, still no proto change)
+- CSV: 20250901-064114-89131436-remote-remote.csv shows 2040, tx_index 0–3, then stops.
+- Rust logs (phase 3): multiple “Non-VM transaction execution failed: Insufficient balance: need 125000,
+have 0”.
+- Phase 2 logs: no such errors (same backend config), so Phase 3 regression is in the new non‑VM code
+path.
+- Phase 3 diff: service.rs implements execute_non_vm_transaction with fee deduction and nonce++ for
+NON_VM; RemoteExecutionSPI classifies TransferContract/TransferAsset as NON_VM and sends only a generic
+TronTransaction with a single value field.
 
-- Add execution fee policy config:
-    - ExecutionConfig additions:
-    - `fees.mode`: `"burn" | "blackhole" | "none"` (default `"burn"`).
-    - `fees.blackhole_address_base58`: Base58 Tron address for credit path.
-    - `fees.support_black_hole_optimization`: bool (default true).
-- Wire env overrides TRON_BACKEND__EXECUTION__FEES__.... Files: crates/common/src/config.rs, rust-backend/
-config.toml.
-- Address parsing helper:
-    - Add a production-safe Base58 Tron address → 20-byte EVM address decoder (lift from_tron_address out
-of #[cfg(test)]). Files: crates/execution/src/storage_adapter.rs or a small crates/common/src/addr.rs.
-- Fee post-processor (VM path only, optional and conservative):
-    - Keep gas_price=0 to avoid coinbase deltas.
-    - If fees.mode = "blackhole" and you want to reflect a fee delta, optionally credit blackhole with a
-simple fee = energy_used * context.energy_price. Note: this is an approximation and not full TRON resource
-settlement; guard behind fees.experimental_vm_blackhole_credit = false by default.
-    - If fees.mode = "burn", do nothing (no state delta).
-    - Implement as a post-processing step after extract_state_changes_from_db, appending a synthetic
-AccountChange for blackhole if enabled. Files: crates/execution/src/tron_evm.rs (post-processing) or
-crates/core/src/service.rs (before converting to protobuf).
-- Non-VM stopgap (no proto change):
-    - Keep non-VM heuristic (no code at to, empty data) to set energy_used=0.
-    - Do not attempt to compute actual TRON non-VM flat fees here; leave fee effects to Java unless you
-enable an optional fees.non_vm_blackhole_credit_flat config and can read dynamic fee parameters from
-storage (future step).
+Is Phase 3 “correct” per plan?
 
-Result: Configurable fee emission that defaults to “burn” (no extra deltas), ensuring parity; optional
-blackhole credit only when explicitly enabled.
+- No — it deviates from the plan in CLAUDE.md and planning.md:
+    - The plan explicitly said not to attempt full TRON resource settlement in Phase 3 unless you can read
+dynamic properties; and to keep non‑VM conservative (no enforced TRX charge unless explicitly configured).
+    - The plan prioritized “burn mode emits no extra account change,” energy_used = 0, and parity — not
+mandatory fee deduction from sender TRX for every non‑VM tx.
 
-Phase 3 – Full Non‑VM Handling (requires proto + Java caller change)
+Root cause summary
 
-- Extend proto to carry tx type:
-    - Add enum TxKind { NON_VM = 0; VM = 1; } to TronTransaction and a tx_kind field.
-    - Pass tx kind from Java (remote mode).
-- Implement non‑VM processor (storage-native, no EVM):
-    - For NON_VM: apply TRX transfer semantics with proper fee handling:
-    - Update sender balance: `-(amount + fee)`, recipient `+amount`.
-    - Fee:
-      - If `fees.mode="burn"`: do not create an account delta (burn is supply change).
-      - If `fees.mode="blackhole"`: credit blackhole account by `fee`.
-    - `energy_used = 0`, `bandwidth_used` computed from payload size and TRON rules; add
-`TronResourceUsage` if needed.
-- Use StorageModuleAdapter to load/update accounts and push StateChangeRecord::AccountChange. Files: new
-util in crates/core/src/service.rs or a new crates/execution/src/non_vm.rs.
-- Dynamic properties:
-    - Optionally read supportBlackHoleOptimization and network fee params from chain state (dynamic
-properties DB) to auto-derive fee mode/amount; otherwise use config fallback.
+- Phase 3 introduced a strict TRX fee deduction for non‑VM txs (using a fixed bandwidth price), which
+is not TRON‑accurate and causes failures when the sender has 0 TRX but free bandwidth should cover the
+transaction. That’s why the Phase 3 export halts in block 2040: the next tx in that block triggers this
+error on the new non‑VM branch.
 
-Result: Remote backend applies TRON-accurate non‑VM fees and emits correct state deltas including
-blackhole credit when configured.
+What to change (minimal, safe path)
 
-Validation
+- Disable forced TRX deduction for non‑VM unless explicitly configured:
+    - If fees.mode = "burn" and non_vm_blackhole_credit_flat is None, set fee_amount = 0 and skip balance
+check for the fee (keep debit only for the TRX transfer amount).
+    - Do not increment nonce for non‑VM.
+- Keep blackhole credit optional behind config:
+    - Only credit blackhole when fees.mode = "blackhole" and a flat amount is configured
+(non_vm_blackhole_credit_flat).
+- Don’t treat TRC‑10 as TRX:
+    - Either pass contract type (or asset id) in the proto so the backend can branch, or leave
+TransferAsset on the VM/legacy path for now to avoid incorrect TRX debits.
+- Ensure context is deterministic:
+    - Always populate block_number, block_timestamp, coinbase from the real BlockCapsule; avoid 0/now
+fallbacks during replay.
 
-- Unit tests:
-    - VM: ensure no AccountChange for coinbase even when energy_used > 0. Files: crates/execution/src/
-tests/*.
-    - Sorting: ensure deterministic ordering of state_changes.
-    - Addr parsing: Base58 ↔ 20-byte conversions round-trip.
-- Integration checks:
-    - Re-run your two nodes and scripts/execution_csv_compare.py:
-    - Expect `state_change_count` and `state_digest_sha256` to converge to ~100% on VM txs.
-    - `energy_used`: matches embedded; non‑VM → 0.
-    - No coinbase-related mismatches.
-- Performance: confirm no regression from sorting and post-processing; log only at debug.
+If you want, I can:
 
-Rollout
+- Patch service.rs to make non‑VM burns free by default (no TRX fee) and remove nonce++ for NON_VM,
+keeping optional blackhole credit only when configured.
+- Gate any fee deduction behind non_vm_blackhole_credit_flat to match the plan.
+- Leave TRC‑10 on VM/legacy path or add a proto field to disambiguate before enabling non‑VM handling
+for it.
 
-- Default config: fees.mode="burn", coinbase suppression on. No behavior change visible to Java except
-removal of coinbase deltas.
-- Backward-compat flags: execution.evm_eth_coinbase_compat=true (off by default) to temporarily restore
-old behavior if needed.
-- Docs: update rust-backend/config.toml and README about fee policy and TRON parity, note the proto
-extension in Phase 3.
+This should let the Phase 3 run progress past block 2040 and keep state_change_count parity for non‑VM
+while avoiding the incorrect “Insufficient balance” errors.
 
-If you want, I can draft the exact config keys and the minimal code diffs for Phase 1 to get you parity
-quickly, then outline the Phase 2/3 changes behind feature flags.
+---
 
+think harder:
+
+> Either pass contract type (or asset id) in the proto so the backend can branch, or leave TransferAsset  
+on the VM/legacy path for now to avoid incorrect TRX debits.
+
+
+What's your recommendation? based on the fact that TRC-10 tokens on the TRON blockchain are not executed  
+using the TRON EVM or TVM (TRON Virtual Machine).  
+
+---
+
+Recommendation: carry explicit TRON contract type (and TRC‑10 metadata) in the proto, and handle TRC‑10 as non‑VM in the Rust backend — but keep it on the Java actuator path until the Rust storage/execution can actually update TRC‑10 ledgers.
+
+Why
+
+- TRC‑10 is non‑VM: It never runs on TVM/EVM. Modeling it as VM is incorrect and will silently miss asset balance updates.
+- Backend readiness: Your Rust logs show missing TRC‑10 stores (“Database asset-issue-v2 not found”). Without these DBs wired, the backend cannot apply TRC‑10 state changes.
+- CSV parity: Java actuators already produce the correct TRC‑10 deltas; forcing it through VM or a
+half‑baked NON_VM path will break state_change_count and digests.
+
+Short‑term (stabilize parity)
+
+- Don’t route TransferAssetContract to Rust: leave it on Java actuators and remote storage (Java writes
+via RemoteStorageSPI), so CSV reflects correct TRC‑10 balance changes.
+- Keep TransferContract (TRX) on the Rust NON_VM path, but remove enforced TRX fee deduction by default
+(no nonce++, no flat fee unless explicitly configured), to avoid the “Insufficient balance” halts you hit.
+
+Medium‑term (correct architecture)
+
+- Proto: add a contract_type (or a TRON contract_type enum mirroring Java) and include TRC‑10 asset_id
+for TransferAssetContract.
+- Rust: implement a TRC‑10 non‑VM processor:
+    - Read/write TRC‑10 balances (account-asset, asset-issue-v2), handle account creation, bandwidth fee
+semantics (burn vs blackhole credit) from config/dynamic properties.
+    - Emit deterministic state changes matching Java’s journaling.
+- Storage: expose the TRC‑10 databases in the storage engine and through the adapter.
+
+What not to do
+
+- Don’t send TRC‑10 down the VM path as a fallback — it misrepresents TRON semantics and won’t produce the
+required asset balance deltas.
+
+
+---
+
+Think harder.
+
+Now don't start the implementation, let's document all these detailed plan, with detailed todo lists, in CLAUDE.md
+
+(
+not only the "Don’t treat TRC‑10 as TRX" part
+
+but also other parts including but not limited to:
+- Disable forced TRX deduction for non‑VM unless explicitly configured
+- Keep blackhole credit optional behind config
+- Ensure context is deterministic
+)
 
